fixed firefox scrollbars and header colors

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@ html, body {
     height: 100%;
     padding: 0px;
     margin: 0px;
+    /* firefox scrollbar */
+    scrollbar-color: #555 #1E1E1E;
+    scrollbar-width: thin;
 }
 
 .container {
@@ -27,6 +30,9 @@ html, body {
     overflow-x: scroll;
     z-index: inherit;
     float: left;
+    /* firefox scrollbar */
+    scrollbar-color: #555 #1E1E1E;
+    scrollbar-width: thin;
 }
 
 @media screen and (min-width: 800px) { 
@@ -74,6 +80,8 @@ html, body {
 .left-menu::-webkit-scrollbar-thumb {
     background-color: #555;
 }
+
+
 
 .left-menu a {
     color: #cccccc;
@@ -213,7 +221,10 @@ li.current {
     width: 100%;  
     height: 35px;
     overflow-x: scroll;
-    overflow-y: hidden;  
+    overflow-y: hidden;
+    /* firefox scrollbar */
+    scrollbar-color: #555 #1E1E1E;
+    scrollbar-width: thin;
 }
 
 .main-tabs-scroll::-webkit-scrollbar-track,
@@ -316,7 +327,10 @@ li.current {
     } 
 }
 
-.main-content h2, h3, h4, h5 {
+.main-content h2,
+.main-content h3,
+.main-content h4,
+.main-content h5 {
     font-size: 14px;
     color: #569cd6;
 }
@@ -452,7 +466,11 @@ li.current {
     } 
 }
 
-.main-content-preview h1, h2, h3, h4, h5 {
+.main-content-preview h1, 
+.main-content-preview h2,
+.main-content-preview h3,
+.main-content-preview h4,
+.main-content-preview h5 {
     font-weight: 400;
     color: #C9D4D4;
 }
